--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "ownerNumber": ["6285921165857@s.whatsapp.net"],
-  "ownerName": ["Christian ID"],
-  "botName": "Izumi - MD",
+  "ownerNumber": ["6289516947204@s.whatsapp.net"],
+  "ownerName": ["Iyan ID"],
+  "botName": "Ian - MD",
   "sessionName": "session",
   "pathimg": "./media/chris2.jpg",
   "gamewaktu": 90,
